Minor edits to index

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     <section id="contact-info">
       <h2>Contact Info</h2>
       <ul>
-        <li><strong>Email:</strong> <a href="#">mailto:shanehill16@gmail.com</a></li>
-        <li><strong>Github:</strong> <a href="#">https://github.com/Shane1216</a></li>
-        <li><strong>Portfolio:</strong> <a href="#">coming soon</a></li>
+        <li><strong>Email:</strong> <a href="mailto:shanehill16@gmail.com">shanehill16@gmail.com</a></li>
+        <li><strong>Github:</strong> <a href="https://github.com/Shane1216">Github</a></li>
+        <li><strong>Portfolio:</strong> <a href="https://shane1216.github.io/">Portfolio</a></li>
       </ul>
     </section>
   </div>
